prometheus/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
---
apiVersion: v1
kind: Pod
metadata:
  name: prometheus
  namespace: prometheus
  labels:
    app: prometheus
spec:
  containers:
    - name: prometheus
      image: prom/prometheus:v3.12.0
      args:
        - "--config.file=/etc/prometheus/prometheus.yml"
      ports:
        - containerPort: 9090
          name: web
      volumeMounts:
        - name: prometheus-config
          mountPath: /etc/prometheus/prometheus.yml
          subPath: prometheus.yml
  volumes:
    - name: prometheus-config
      configMap:
        name: prometheus-config
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: prometheus
spec:
  type: ClusterIP
  selector:
    app: prometheus
  ports:
    - name: web
      port: 9090
      targetPort: 9090
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: prometheus
  annotations:
    cert-manager.io/cluster-issuer: acme-nbl
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - prometheus.vil.nbl.sh
      secretName: prometheus-tls
  rules:
    - host: prometheus.vil.nbl.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
