prometheus/ingress.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: prometheus
spec:
  type: ClusterIP
  selector:
    app: prometheus
  ports:
    - name: web
      port: 9090
      targetPort: 9090
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: prometheus
  annotations:
    cert-manager.io/cluster-issuer: acme-nbl
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - prometheus.vil.nbl.sh
      secretName: prometheus-tls
  rules:
    - host: prometheus.vil.nbl.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
